--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
   "unique-random-useragent": "^2.0.0",
 
   "websocket-stream": "^5.5.2",
-  "yt-search": "^2.13.1",
+  "yt-search": "^2.13.1"
   }
 }
